Release 1.9:
 - More fixes to build in Windows with zlib (mingw and msvc).

Release 1.8:
 - Build .cmxs with C bindings (Closes: #1303)
 - Use advapi32 on Windows (Close: #1055)
 - Allow to define --zlib-include and --zlib-libdir if zlib is not installed in
   the standard location.

Release 1.7:
- Added SHA-3 hash function.

Release 1.6:
- Regenerate setup.ml with oasis 0.3.0~rc6 version

Release 1.5:
- Fix bug check in buffered_output#ensure_capacity (Closes: #879)
- Allow to have padding in Base64 (Closes: #897)

Release 1.4:
- Added Blowfish block cipher.
- Added MAC functions based on HMAC construction applied to 
  SHA-256 and RIPEMD-160.
- Added OASIS and findlib support (Closes: #589)

Release 1.3:
- Added hash functions SHA-256 and RIPEMD-160.
- Added "flush" method to transforms.
- Fixed infinite loop in decompression of incorrect data.

Release 1.2:
- MS Windows port

Release 1.1:
- Added Diffie-Hellman key agreement
- Exported raw modular arithmetic operations (mod_power, mod_mult)

Release 1.0:
- First public release